--- a/src/components/Alumni/one.css
+++ b/src/components/Alumni/one.css
@@ -44,3 +44,34 @@
   align-items: center;
   margin-top: 10px;
 }
+
+/* Skeleton loading styles */
+.skeleton {
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  display: inline-block;
+  height: 300px; /* Match the image height */
+  width: 300px; /* Match the image width */
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+.skeleton-text {
+  width: 100px;
+  height: 20px;
+  margin: 10px auto;
+  background-color: #e0e0e0;
+  border-radius: 4px;
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #e0e0e0;
+  }
+  50% {
+    background-color: #f0f0f0;
+  }
+  100% {
+    background-color: #e0e0e0;
+  }
+}
