--- a/src/components/Blog/BlogCard.css
+++ b/src/components/Blog/BlogCard.css
@@ -23,6 +23,9 @@
   background-color: #f59e0b; /* Orange button */
   border: none;
   font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .blog-card .btn-primary:hover {
