Blogs Card added 3 in one row

--- a/src/components/Blog/Blogs.css
+++ b/src/components/Blog/Blogs.css
@@ -9,3 +9,8 @@
   visibility: hidden;
   pointer-events: none; /* Prevent interaction during loading */
 }
+
+.blog-header {
+  font-weight: bolder;
+  color: #2b3991;
+}
