Blog section header style changes

--- a/src/components/Blog/Blogs.css
+++ b/src/components/Blog/Blogs.css
@@ -10,7 +10,7 @@
   pointer-events: none; /* Prevent interaction during loading */
 }
 
-.blog-header {
+.kts-blogs {
   font-weight: bolder;
   color: #2b3991;
 }
