--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,71 +1,7 @@
-.register {
-  background-color: #4a3aff;
-  padding: 20px;
+.register-here {
+  background-color: #2b3991;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.text-header {
-  font-size: 2em;
-  margin-bottom: 20px;
-}
-
-.register-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  max-width: 600px;
-}
-
-.register-form label {
-  margin-bottom: 15px;
-  font-size: 1em;
-  position: relative;
-}
-
-.register-form label.required::before {
-  content: " * ";
-  color: red;
-}
-
-.register-form input,
-.register-form select,
-.register-form textarea,
-.register-form button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 5px;
-}
-
-.radio-group {
-  display: flex;
-  flex-direction: column;
-  margin-top: 5px;
-}
-
-.radio-group label {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.radio-group input[type="radio"] {
-  width: 1.5em;
-  height: 1.5em;
-  margin-right: 10px;
-}
-
-button[type="submit"] {
-  background-color: #fff;
-  color: #4a3aff;
-  border: none;
-  padding: 10px;
-  font-size: 1em;
-  cursor: pointer;
-}
-
-button[type="submit"]:hover {
-  background-color: #e0e0e0;
 }
