--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -12,7 +12,11 @@
 
 body {
   background-image: url("../../img/course-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   height: 100vh;
+  margin: 0;
 }
 
 .course-header {
@@ -23,4 +27,15 @@ body {
 
 .course-container {
   height: 100vh;
+}
+
+.container {
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.8
+  ); /* Adding a white background with some transparency */
+  padding: 20px;
+  border-radius: 10px;
 }
