--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -11,12 +11,26 @@
 }
 
 body {
+  position: relative;
+  /* Keeping the image properties here for proper positioning */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("../../img/course-bg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  margin: 0;
+  filter: brightness(0.5); /* Adjust this value for the desired darkness */
+  z-index: -1; /* Ensure the overlay is behind other content */
 }
 
 .course-header {
@@ -25,17 +39,9 @@ body {
   font-size: 4.5rem;
 }
 
-.course-container {
-  height: 100vh;
-}
-
-.container {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); /* Adding a white background with some transparency */
-  padding: 20px;
-  border-radius: 10px;
+.card-header {
+  color: white;
+  font-weight: bold;
+  font-size: 2.5rem;
+  padding-left: 30px;
 }
