--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -4,14 +4,6 @@
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
-.course-sub {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: xx-large;
-}
-
 .courses-container.hidden {
   opacity: 0;
   visibility: hidden;
@@ -23,6 +15,7 @@
   min-height: 100vh; /* Ensure it covers the full viewport height */
   background: url("../../img/course-bg.jpg") no-repeat center center;
   background-size: cover;
+  padding: 20px; /* Add padding to ensure content is not flush with the edges */
 }
 
 .course-header {
@@ -33,11 +26,12 @@
   margin-top: 20px;
 }
 
-.card-header {
+.course-sub {
   color: white;
   font-weight: bold;
   font-size: 2.5rem;
-  padding-left: 30px;
+  text-align: left;
+  margin: 40px 0 20px;
 }
 
 .row {
@@ -45,7 +39,6 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  margin: 20px;
 }
 
 .col-md-6 {
