--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -34,7 +34,7 @@
   margin: 40px 0 20px;
 }
 
-.row {
+.rows {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -47,7 +47,7 @@
   justify-content: center;
 }
 
-.card {
+.cards {
   width: 100%;
   margin-bottom: 20px;
 }
@@ -67,6 +67,7 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+  filter: brightness(0.3);
 }
 
 .card-body {
@@ -88,8 +89,10 @@
 
 .btn-light {
   color: #2b3991;
-  background-color: white;
-  border-color: white;
+  background-color: #fea92c;
+  color: white;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
