--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -67,12 +67,16 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
-  filter: brightness(0.3);
+  filter: brightness(0.5);
 }
 
 .card-body {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 20px;
+  text-align: center;
 }
 
 .card-body h5 {
