--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -18,7 +18,7 @@
   padding: 20px; /* Add padding to ensure content is not flush with the edges */
 }
 
-.courses-header {
+.course-header {
   color: white;
   font-weight: bolder;
   font-size: 4.5rem;
@@ -26,7 +26,7 @@
   margin-top: 20px;
 }
 
-.courses-sub {
+.course-sub {
   color: white;
   font-weight: bold;
   font-size: 2.5rem;
@@ -34,40 +34,32 @@
   margin: 40px 0 20px;
 }
 
-.courses-rows {
+.course-rows {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
 }
 
-.courses-col-md-6,
-.courses-col-md-4 {
+.course-col {
+  flex: 1 1 30%; /* Adjust the width as needed */
   display: flex;
   justify-content: center;
 }
 
-.courses-col-md-6 {
-  flex: 1 1 49%; /* Adjust the width as needed */
+.course-board {
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-.courses-col-md-4 {
-  flex: 1 1 30%; /* Adjust the width as needed */
-}
-
-.courses-board {
-  width: 50%s;
-  margin-bottom: 20px;
-}
-
-.courses-board-img-top {
+.course-board-img-top {
   height: 250px;
   background-size: cover;
   background-position: center;
   position: relative;
 }
 
-.courses-board-img-top::after {
+.course-board-img-top::after {
   content: "";
   position: absolute;
   top: 0;
@@ -78,7 +70,7 @@
   filter: brightness(0.5);
 }
 
-.courses-board-body {
+.course-board-body {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -87,19 +79,19 @@
   text-align: center;
 }
 
-.courses-board-body h5 {
+.course-board-body h5 {
   font-weight: bold;
 }
 
-.courses-board-body p {
+.course-board-body p {
   margin-bottom: 20px;
 }
 
-.courses-bg-primary {
+.course-bg-primary {
   background-color: #2b3991 !important;
 }
 
-.courses-btn-light {
+.course-btn-light {
   color: #2b3991;
   background-color: #fea92c;
   color: white;
@@ -108,8 +100,7 @@
 }
 
 @media (max-width: 768px) {
-  .courses-col-md-6,
-  .courses-col-md-4 {
+  .course-col {
     flex: 1 1 100%;
   }
 }
