--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -30,26 +30,27 @@
   color: white;
   font-weight: bold;
   font-size: 2.5rem;
-  text-align: left;
+  text-align: center;
   margin: 40px 0 20px;
 }
 
 .course-rows {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
 .course-col {
-  flex: 1 1 30%; /* Adjust the width as needed */
+  width: 100%;
+  max-width: 1600px; /* Adjust the width as needed */
   display: flex;
   justify-content: center;
 }
 
 .course-board {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .course-board-img-top {
@@ -95,12 +96,13 @@
   color: #2b3991;
   background-color: #fea92c;
   color: white;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  align-content: center;
 }
 
 @media (max-width: 768px) {
   .course-col {
-    flex: 1 1 100%;
+    width: 100%;
+    max-width: none; /* Ensure it covers full width on smaller screens */
   }
 }
