--- a/src/components/Logo-Vid/Logo.css
+++ b/src/components/Logo-Vid/Logo.css
@@ -1,17 +1,29 @@
 .logo-animation-container {
-  position: relative; /* Allows positioning of the controls */
+  position: relative;
   width: 100%;
-  height: 100vh; /* Full viewport height */
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden; /* Prevents overflow */
-  margin: 0; /* Removes default margins */
-  padding: 0; /* Removes default padding */
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .logo-animation-video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .logo-animation-container {
+    height: 75vh; /* Adjust height for tablets */
+  }
+}
+
+@media (max-width: 576px) {
+  .logo-animation-container {
+    height: 50vh; /* Adjust height for mobile devices */
+  }
 }
