--- a/src/components/Objective/ObjectiveAndWhatWeDo.module.css
+++ b/src/components/Objective/ObjectiveAndWhatWeDo.module.css
@@ -9,6 +9,7 @@
   background-size: cover;
   color: white;
   padding: 40px;
+  min-height: 300px; /* Ensure minimum height */
 }
 
 .objectiveSection {
@@ -22,6 +23,12 @@
 .overlay {
   background-color: rgba(0, 0, 50, 0.7);
   padding: 20px;
+}
+
+.objectiveSection .overlay p,
+.whatWeDoSection .overlay ul,
+.whatWeDoSection .overlay li {
+  color: white;
 }
 
 h2 {
@@ -38,7 +45,46 @@ li {
 }
 
 li:before {
-  content: "—";
+  content: "•";
   color: #fca311;
   padding-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .objectiveSection,
+  .whatWeDoSection {
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 24px; /* Adjust font size for tablets */
+  }
+
+  .overlay p,
+  .overlay ul,
+  .overlay li {
+    font-size: 16px; /* Adjust font size for tablets */
+  }
+}
+
+@media (max-width: 576px) {
+  .objectiveSection,
+  .whatWeDoSection {
+    padding: 10px;
+    min-height: 250px; /* Adjust minimum height for mobile */
+  }
+
+  h2 {
+    font-size: 20px; /* Adjust font size for mobile devices */
+  }
+
+  .overlay p,
+  .overlay ul,
+  .overlay li {
+    font-size: 14px; /* Adjust font size for mobile devices */
+  }
+
+  .row {
+    flex-direction: column; /* Stack sections vertically on mobile */
+  }
 }
