--- a/src/components/Speciality/Speciality.css
+++ b/src/components/Speciality/Speciality.css
@@ -3,17 +3,8 @@
   font-family: "Poppins", sans-serif;
   font-size: 40px;
   font-weight: 700;
-  font-style: normal;
-  font-variant: normal;
-  font-kerning: auto;
-  font-optical-sizing: auto;
-  font-stretch: 100%;
-  font-variation-settings: normal;
-  font-feature-settings: normal;
   text-transform: uppercase;
-  text-decoration: none solid rgb(38, 38, 44);
   text-align: start;
-  text-indent: 0px;
 }
 
 h3 {
@@ -21,17 +12,7 @@ h3 {
   font-family: "Poppins", sans-serif;
   font-size: 24px;
   font-weight: 900;
-  font-style: normal;
-  font-variant: normal;
-  font-kerning: auto;
-  font-optical-sizing: auto;
-  font-stretch: 100%;
-  font-variation-settings: normal;
-  font-feature-settings: normal;
-  text-transform: none;
-  text-decoration: none solid rgb(43, 57, 145);
   text-align: left;
-  text-indent: 0px;
 }
 
 p {
@@ -39,15 +20,54 @@ p {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  font-style: normal;
-  font-variant: normal;
-  font-kerning: auto;
-  font-optical-sizing: auto;
-  font-stretch: 100%;
-  font-variation-settings: normal;
-  font-feature-settings: normal;
-  text-transform: none;
-  text-decoration: none solid rgb(118, 118, 127);
   text-align: left;
-  text-indent: 0px;
+}
+
+.speciality-item {
+  margin-bottom: 20px;
+}
+
+.speciality-item h4 {
+  font-weight: bold;
+}
+
+.speciality-images img {
+  border: 5px solid #fbb040; /* Adjust the border color and size as needed */
+}
+
+@media (max-width: 768px) {
+  .text-center-header {
+    font-size: 32px; /* Adjust font size for tablets */
+  }
+
+  h3 {
+    font-size: 20px; /* Adjust font size for tablets */
+  }
+
+  p {
+    font-size: 16px; /* Adjust font size for tablets */
+  }
+
+  .speciality-images img {
+    margin-bottom: 20px; /* Add space between images for tablets */
+  }
+}
+
+@media (max-width: 576px) {
+  .text-center-header {
+    font-size: 28px; /* Adjust font size for mobile devices */
+    text-align: center; /* Center align for mobile */
+  }
+
+  h3 {
+    font-size: 18px; /* Adjust font size for mobile devices */
+  }
+
+  p {
+    font-size: 14px; /* Adjust font size for mobile devices */
+  }
+
+  .speciality-images img {
+    margin-bottom: 15px; /* Add space between images for mobile */
+  }
 }
