--- a/src/components/whyChoose/whyChoose.css
+++ b/src/components/whyChoose/whyChoose.css
@@ -44,8 +44,35 @@
   text-align: justify;
 }
 
-@media (min-width: 768px) {
-  .whyChoose-container .header {
-    width: 100%; /* Ensures the header and line take up the same width as the image */
+@media (max-width: 768px) {
+  .why-us-heading {
+    font-size: 2rem; /* Adjust font size for tablets */
+    padding-right: 0; /* Remove padding */
+    text-align: center; /* Center align text */
+  }
+  
+  .whyChoose-container p {
+    font-size: 16px; /* Adjust font size for tablets */
+    line-height: 1.6;
+  }
+}
+
+@media (max-width: 576px) {
+  .why-us-heading {
+    font-size: 1.5rem; /* Adjust font size for mobile devices */
+  }
+  
+  .whyChoose-container p {
+    font-size: 14px; /* Adjust font size for mobile devices */
+    line-height: 1.4;
+  }
+  
+  .whyChoose-container img {
+    width: 100%; /* Ensure the image is responsive */
+    height: auto;
+  }
+  
+  .icon-text-spacing {
+    margin-left: 10px; /* Adjust icon spacing for mobile devices */
   }
 }
