Link added to buttons in homepage

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -2,7 +2,8 @@
   color: white;
 }
 
-.course-header {
+.card-header {
+  color: black;
   text-align: center; /* Center align the header */
   margin-bottom: 2rem; /* Add margin at the bottom for spacing */
   font-weight: bolder;
