--- a/src/components/Certificate/Certificate.css
+++ b/src/components/Certificate/Certificate.css
@@ -30,23 +30,9 @@
   padding-left: 20px; /* Added padding to give space for quotes */
 }
 
-.unique-course-description::before,
-.unique-course-description::after {
-  content: "“";
-  font-size: 2rem;
-  color: #2b3991;
-  position: absolute;
-}
-
 .unique-course-description::before {
   left: 0;
   top: -10px;
-}
-
-.unique-course-description::after {
-  content: "”"; /* Corrected the closing quote */
-  right: -10px;
-  bottom: -10px;
 }
 
 .btn-primary {
@@ -56,4 +42,11 @@
 
 .btn-primary:hover {
   background-color: #1e286e;
+}
+
+.quote-icon {
+  font-size: 4rem; /* Increased font size for larger quotes */
+  color: #2b3991;
+  vertical-align: middle; /* Align icons vertically with text */
+  margin: 0 5px; /* Added margin to space the icons from the text */
 }
