Footer is responsivenow

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -60,9 +60,6 @@
 }
 
 /* Styles for copyright and link at the bottom */
-.text-center p {
-  margin-bottom: 0;
-}
 
 .footer-link {
   text-decoration: none; /* Remove underline */
@@ -94,6 +91,13 @@
 .scroll-to-top:hover {
   opacity: 0.8;
 }
+.unique-copyright p {
+  font-size: 25px;
+}
+.unique-name {
+  color: #2b3991;
+  text-decoration: none;
+}
 
 @keyframes bounce {
   0%,
@@ -124,4 +128,93 @@
 
 .contact-details .fs-5 {
   margin-bottom: 15px; /* Adjust as needed for bottom gaps */
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  .footer {
+    padding: 10px;
+  }
+
+  .contact-details {
+    margin-bottom: 15px; /* Adjust margin for smaller screens */
+  }
+
+  .fs-5 {
+    font-size: 0.9rem; /* Adjust font size for smaller screens */
+    margin-bottom: 8px; /* Adjust margin for smaller screens */
+  }
+
+  .navi-link {
+    font-size: 0.9rem; /* Adjust font size for smaller screens */
+    margin: 0 5px; /* Adjust margin for smaller screens */
+  }
+
+  .container {
+    padding: 10px; /* Adjust padding for smaller screens */
+  }
+  .unique-copyright p {
+    font-size: 20px;
+  }
+  .unique-name {
+    color: #2b3991;
+    text-decoration: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer {
+    padding: 5px;
+  }
+
+  .fs-5 {
+    font-size: 0.8rem; /* Further adjust font size for very small screens */
+    margin-bottom: 5px; /* Further adjust margin for very small screens */
+  }
+
+  .navi-link {
+    font-size: 0.8rem; /* Further adjust font size for very small screens */
+    margin: 0 3px; /* Further adjust margin for very small screens */
+  }
+
+  .container {
+    padding: 5px; /* Further adjust padding for very small screens */
+  }
+  .unique-copyright p {
+    font-size: 14px;
+  }
+  .unique-name {
+    color: #2b3991;
+    text-decoration: none;
+  }
+}
+@media (max-width: 320px) {
+  .footer {
+    padding: 3px;
+  }
+
+  .contact-details {
+    margin-bottom: 10px; /* Further adjust margin for smaller screens */
+  }
+
+  .fs-5 {
+    font-size: 0.6rem; /* Further adjust font size for very small screens */
+    margin-bottom: 2px; /* Further adjust margin for very small screens */
+  }
+
+  .navi-link {
+    font-size: 0.6rem; /* Further adjust font size for very small screens */
+    margin: 0 1px; /* Further adjust margin for very small screens */
+  }
+
+  .container {
+    padding: 3px; /* Further adjust padding for very small screens */
+  }
+  .unique-copyright p {
+    font-size: 12px;
+  }
+  .unique-name {
+    color: #2b3991;
+    text-decoration: none;
+  }
 }
