--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -46,3 +46,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 576px) {
+  .video-container {
+    display: none;
+  }
+}
