--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,9 +3,10 @@
 .font-poppins {
   font-family: "Poppins", sans-serif;
 }
+
 .navbar {
-  padding-top: 20px; /* Increase the top padding of the navbar */
-  padding-bottom: 20px; /* Increase the bottom padding of the navbar */
+  padding-top: 20px;
+  padding-bottom: 20px;
   z-index: 9999;
 }
 
@@ -14,23 +15,24 @@
 }
 
 .navbar-brand img {
-  max-height: 60px; /* Adjust the maximum height of the logo */
+  max-height: 60px;
+  width: auto;
 }
 
 .nav-item {
   margin-right: 50px;
-  font-weight: bolder; /* Add more margin between navbar items */
+  font-weight: bolder;
+  font-size: medium;
+}
+.collapse {
+  padding-top: 5px;
+  padding-left: 30px;
 }
 
-.nav-item :hover {
+.nav-item:hover {
   color: #2a3a91;
 }
-/* Optional: Add margin to the right of the last navbar item to avoid spacing after it */
-.nav-item:last-child {
-  margin-right: 0;
-}
 
-/* Show dropdown menu on hover */
 .navbar-nav .nav-item.dropdown:hover .dropdown-menu {
   display: block;
 }
@@ -41,21 +43,21 @@
 }
 
 .social-icons a {
-  margin-right: 40px; /* Increase the gap between social media icons */
-  color: #2a3a91; /* Change the color of the icons */
+  margin-right: 40px;
+  color: #2a3a91;
 }
 
 .social-icons a i {
-  font-size: 30px; /* Adjust the size of the icons */
+  font-size: 30px;
 }
 
 .dropdown-menu {
-  min-width: 200px; /* Adjust the width as needed */
-  animation: fadeInDown 0.5s ease; /* Add animation */
+  min-width: 200px;
+  animation: fadeInDown 0.3s ease;
 }
 
 .dropdown-menu a {
-  padding: 10px 20px; /* Adjust padding as needed */
+  padding: 10px 20px;
 }
 
 @keyframes fadeInDown {
@@ -70,5 +72,44 @@
 }
 
 .dropdown-menu .dropdown-item:hover {
-  color: #2a3a91; /* Change text color on hover */
+  color: #2a3a91;
+}
+
+@media (max-width: 991px) {
+  .navbar-brand {
+    margin-left: 0;
+  }
+
+  .navbar-nav {
+    padding-top: 15px;
+  }
+
+  .nav-item {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+
+  .social-icons {
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .social-icons a {
+    margin-right: 20px;
+  }
+
+  .social-icons a:last-child {
+    margin-right: 0;
+  }
+
+  .dropdown-menu {
+    border: none;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .dropdown-item {
+    color: inherit;
+    padding-left: 30px;
+  }
 }
