--- a/src/components/Empower/Empower.css
+++ b/src/components/Empower/Empower.css
@@ -1,14 +1,14 @@
-.card {
+.unique-card {
   background-color: #2b3991; /* Dark blue background */
   color: white; /* White text */
   border: none; /* Remove border */
   border-radius: 15px; /* Rounded corners */
-  margin-bottom: 10px; /* Space between cards */
+  margin-bottom: 20px; /* Increased space between cards */
   min-height: 450px; /* Set a minimum height */
   transition: background-color 0.3s ease; /* Smooth transition */
 }
 
-.card:hover {
+.unique-card:hover {
   background-color: #243673; /* Darker blue on hover */
 }
 
@@ -22,17 +22,18 @@
   transform: translateY(-5px); /* Float animation */
 }
 
-.card-title {
+.unique-card-title {
   font-size: 1.5rem; /* Larger title size */
   font-weight: bold; /* Bold font */
   text-align: center; /* Center-aligned */
   margin-bottom: 1rem; /* Space below the title */
 }
 
-.card-text {
+.unique-card-text {
   font-size: 1rem; /* Text size */
   color: white;
   text-align: center; /* Center-aligned */
+  line-height: 30px;
 }
 
 .divider {
