Course Info Homepage Card made responsive

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -109,3 +109,41 @@
     transform: translateY(0);
   }
 }
+
+@media (max-width: 576px) {
+  .tabs-wrapper {
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .caregiver-tab {
+    width: 100%;
+    max-width: none;
+  }
+
+  .caregiver-tab:last-child {
+    margin-bottom: 0;
+  }
+
+  .caregiver-tab .image-container .btn {
+    bottom: 20px;
+    border-radius: 5px;
+    padding: 12px 24px;
+    width: auto;
+    min-width: 150px;
+    font-size: 1rem;
+    white-space: nowrap;
+    color: white;
+    font-weight: bold;
+  }
+}
+
+@media (min-width: 2560px) {
+  .caregiver-tab .image-container .btn {
+    font-size: 1rem;
+    padding: 10px 20px;
+    min-width: 150px;
+    border-radius: 5px;
+    width: auto;
+  }
+}
